--- a/ansible_test/Vagrantfile
+++ b/ansible_test/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "geerlingguy/rockylinux8"
+  config.vm.box = "hashicorp/bionic64"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -57,16 +57,18 @@ Vagrant.configure("2") do |config|
   # Example for VirtualBox:
   #
   config.vm.provider "vmware_desktop" do |vmware|
-  #   # Display the VirtualBox GUI when booting the machine
+    # Display the VirtualBox GUI when booting the machine
     vmware.gui = true
-  #
-  #   # Customize the amount of memory on the VM:
+  
+    # Customize the amount of memory on the VM:
     vmware.vmx["memsize"] = "1024"
   end
   #
   # View the documentation for the provider you are using for more
   # information on available options.
-
+  config.vm.provision "ansible" do |ansible|
+    ansible.playbook = "playbook.yml"
+  end
   # Enable provisioning with a shell script. Additional provisioners such as
   # Ansible, Chef, Docker, Puppet and Salt are also available. Please see the
   # documentation for more information about their specific syntax and use.
