--- a/.gitignore
+++ b/.gitignore
@@ -5454,3 +5454,4 @@ pyspark-env/lib/python3.11/site-packages/urllib3/poolmanager 2.py
 pyspark-env/lib/python3.11/site-packages/urllib3/py 2.typed
 pyspark-env/lib/python3.11/site-packages/urllib3/response 2.py
 .DS_Store
+.DS_Store
