--- a/ansible_test/Vagrantfile
+++ b/ansible_test/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "hashicorp/bionic64"
+  config.vm.box = "generic/rocky8"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -61,8 +61,11 @@ Vagrant.configure("2") do |config|
     vmware.gui = true
   
     # Customize the amount of memory on the VM:
-    vmware.vmx["memsize"] = "1024"
+    vmware.vmx["memsize"] = "2048"  # Increase memory if possible
+    vmware.vmx["numvcpus"] = "2"    # Increase CPU cores if possible
   end
+
+  config.vm.boot_timeout = 600
   #
   # View the documentation for the provider you are using for more
   # information on available options.
